# demo_fasapi

./: .gitignore  .pre-commit-config.yaml  .python-version  main.py  pyproject.toml
demo/: __init__.py  app.py  main.py
demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo/models/: __init__.py  demo.py
demo/views/: demo_view.py
