[tool.poetry]
name = "demo"
version = "0.1.0"
description = "demo"
authors = ["xuhaoqing <xuhaoqing@xinye.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.7"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"
tortoise-orm = "^0.16.14"
aiomysql = "^0.0.20"
asyncpg = "^0.20.1"
pre-commit = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
requests = "^2.24.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
